# X-Ray_Mass_Attenuation_DB

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
code/: calculate_mass_attenuation.py
data/: names_compounds.txt  names_elements.txt
envs/Scripts/: doesitcache-script.py  poetry-script.py  python-build-script.py  virtualenv-script.py
envs/conda-meta/: brotli-python-1.1.0-py312h53d5487_1.json  bzip2-1.0.8-hcfcfb64_5.json  ca-certificates-2024.2.2-h56e8100_0.json  cachecontrol-0.14.0-pyhd8ed1ab_0.json  cachecontrol-with-filecache-0.14.0-pyhd8ed1ab_0.json  certifi-2024.2.2-pyhd8ed1ab_0.json  charset-normalizer-3.3.2-pyhd8ed1ab_0.json  cleo-2.1.0-pyhd8ed1ab_0.json  colorama-0.4.6-pyhd8ed1ab_0.json  crashtest-0.4.1-pyhd8ed1ab_0.json  distlib-0.3.8-pyhd8ed1ab_0.json  dulwich-0.21.7-py312he70551f_0.json  filelock-3.13.3-pyhd8ed1ab_0.json  history  idna-3.6-pyhd8ed1ab_0.json  importlib-metadata-7.1.0-pyha770c72_0.json  intel-openmp-2024.0.0-h57928b3_49841.json  jaraco.classes-3.3.1-pyhd8ed1ab_0.json  keyring-24.3.1-py312h2e8e312_0.json  libblas-3.9.0-21_win64_mkl.json  libcblas-3.9.0-21_win64_mkl.json  libexpat-2.6.2-h63175ca_0.json  libffi-3.4.2-h8ffe710_5.json  libhwloc-2.9.3-default_haede6df_1009.json  libiconv-1.17-hcfcfb64_2.json  liblapack-3.9.0-21_win64_mkl.json  libsqlite-3.45.2-hcfcfb64_0.json  libxml2-2.12.6-hc3477c8_1.json  libzlib-1.2.13-hcfcfb64_5.json  mkl-2024.0.0-h66d3029_49657.json  more-itertools-10.2.0-pyhd8ed1ab_0.json  msgpack-python-1.0.7-py312h0d7def4_0.json  numpy-1.26.4-py312h8753938_0.json  openssl-3.2.1-hcfcfb64_1.json  (+39 more)
