[tool.poetry]
name = "x-ray-mass-attenuation-db"
version = "0.1.0"
description = "Calculation of transmission coefficient for X-rays"
authors = ["Juan Sebastian Useche"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
polars = "^0.20.16"
matplotlib = "^3.8.3"
icecream = "^2.1.3"
polars-lts-cpu = "^0.20.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
